[gd_scene load_steps=16 format=3 uid="uid://c0amxumgtp7qs"]

[ext_resource type="Script" path="res://scripts/prefabs/player.gd" id="1_piaun"]
[ext_resource type="Texture2D" uid="uid://qen0yjaqhr5m" path="res://assets/art/player_spritesheet.png" id="2_vrusr"]
[ext_resource type="PackedScene" uid="uid://yvybbgl6j7y" path="res://scenes/components/gravity_component.tscn" id="3_uoic6"]
[ext_resource type="PackedScene" uid="uid://uarehsxw4q72" path="res://scenes/components/input_component.tscn" id="4_r8hpx"]
[ext_resource type="PackedScene" uid="uid://dnn3vyoslgvrc" path="res://scenes/components/movement_component.tscn" id="5_dpxu7"]
[ext_resource type="PackedScene" uid="uid://s4fh6g7sht2d" path="res://scenes/components/animation_component.tscn" id="6_vp74b"]
[ext_resource type="PackedScene" uid="uid://4w0ps5wmyg12" path="res://scenes/components/jump_component.tscn" id="7_074eu"]
[ext_resource type="PackedScene" uid="uid://dltmr8t7vvt7f" path="res://scenes/components/score_component.tscn" id="8_qn2wk"]
[ext_resource type="PackedScene" uid="uid://2hfkm2pu2mb2" path="res://scenes/components/coin_hurtbox.tscn" id="8_ugjvr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsl6l"]
size = Vector2(4, 7)

[sub_resource type="Animation" id="Animation_u46bp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bt8pb"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fb6ok"]
resource_name = "run"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5a24v"]
_data = {
"RESET": SubResource("Animation_u46bp"),
"idle": SubResource("Animation_bt8pb"),
"run": SubResource("Animation_fb6ok")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_u0mgv"]
radius = 5.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("anim_player", "gravity_component", "input_component", "movement_component", "animation_component", "jump_component")]
script = ExtResource("1_piaun")
anim_player = NodePath("AnimationPlayer")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
jump_component = NodePath("JumpComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vrusr")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jsl6l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5a24v")
}

[node name="GravityComponent" parent="." instance=ExtResource("3_uoic6")]

[node name="InputComponent" parent="." instance=ExtResource("4_r8hpx")]

[node name="MovementComponent" parent="." instance=ExtResource("5_dpxu7")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite", "anim_player") instance=ExtResource("6_vp74b")]
sprite = NodePath("../Sprite2D")
anim_player = NodePath("../AnimationPlayer")

[node name="JumpComponent" parent="." instance=ExtResource("7_074eu")]

[node name="ScoreComponent" parent="." instance=ExtResource("8_qn2wk")]

[node name="CoinHurtbox" parent="." node_paths=PackedStringArray("score_component") instance=ExtResource("8_ugjvr")]
score_component = NodePath("../ScoreComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinHurtbox"]
shape = SubResource("CircleShape2D_u0mgv")
